<resources>
    <string name="my_app_name" translatable="false">yodawy</string>
    <string name="add_new_address">add new address</string>
    <string name="selected_address">address</string>
    <string name="addresses">Choose Address</string>
    <string name="street">street</string>
    <string name="add_street_name">street name</string>
    <string name="building">building</string>
    <string name="add_building_number">building number</string>
    <string name="floor">floor</string>
    <string name="add_floor_number">enter floor number</string>
    <string name="apartment">apartment</string>
    <string name="add_apartment_number">add apartment number</string>
    <string name="nearest_landmark">nearest landmark</string>
    <string name="add_bank_name_supermarket_hospital">bank name supermarket hospital...</string>
    <string name="nickname">Nickname</string>
    <string name="home_office_etc">Home, Office, etc.</string>
    <string name="save_address">save</string>
    <string name="order_via_n_prescription">order via prescription</string>
    <string name="find_n_medications">find medications</string>
    <string name="yodawy_home_title">yodawy</string>
    <string name="orders_history">orders history</string>
    <string name="cart">cart</string>
    <string name="search">search</string>
    <string name="low_stock">Low Stock</string>
    <string name="low_stock_alert">This product may be available for delivery soon</string>
    <string name="pravotin_100mg_sach_g_medication_name">PRAVOTIN (100MG SACH) G. medication name</string>
    <string name="_14_sachets">14 Sachets</string>
    <string name="egp_85_00">EGP 85.00</string>
    <string name="delivery_within_60_minutes">delivery within 60 minutes</string>
    <string name="delivery_time_depends_on_availability">Delivery time depends on availability</string>
    <string name="_6_photos_added">6 photos added</string>
    <string name="prices_may_vary_across_pharmacies">Prices may vary across pharmacies</string>
    <string name="go_to_checkout">go to check out</string>
    <string name="total_amount">total amount</string>
    <string name="add_note">Add Note</string>
    <string name="place_order">place order</string>
    <string name="delivery_time">delivery time</string>
    <string name="payment">payment</string>
    <string name="subtotal">Subtotal</string>
    <string name="to_be_confirmed">Determined at delivery</string>
    <string name="add">إضافة</string>
    <string name="delivery_fees">delivery fees</string>
    <string name="for_free">for free</string>
    <string name="total">total</string>
    <string name="order_is_canceled">Order is Canceled</string>
    <string name="order_is_placed">Your request has been successfully confirmed</string>
    <string name="nickname_">Property classification</string>
    <string name="location">Please select your location</string>
    <string name="product_details">product details</string>
    <string name="will_clear_cart">clear cart</string>
    <string name="alert_title">alert</string>
    <string name="alert_cancel">cancel</string>
    <string name="alert_ok">ok</string>
    <string name="cart_empty">cart is empty</string>
    <string name="expoler_yodawy">Discover yodawy and start shopping</string>
    <string name="cash">cash</string>
    <string name="order_number">order number</string>
    <string name="order_date">order rate</string>
    <string name="address">address</string>
    <string name="api_key">AIzaSyBgs1HTg5sxrMKTwCI0cUax4Wh1lOGPFKo</string>
    <string name="select_location">select</string>
    <string name="order_details">order details</string>
    <string name="please_wait">please wait</string>
    <string name="order_status">order status</string>
    <string name="terms">The deductible will be applied to the invoice</string>
    <string name="after_discount">after discount</string>

</resources>