<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layout_header"
            android:layout_height="@dimen/_90sdp"
            android:layout_width="match_parent"
            layout="@layout/layout_header" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".modules.address.presentation.view.addaddressscreen.AddAddressActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/street"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:hint="@string/add_street_name"
                    android:inputType="text"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/purple_200"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/building"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:id="@+id/building"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:hint="@string/add_building_number"
                    android:inputType="text"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/purple_200"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_10ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:text="@string/floor"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/_12ssp" />

                        <EditText
                            android:id="@+id/floor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:hint="@string/add_floor_number"
                            android:inputType="text"
                            android:padding="@dimen/_8sdp"
                            android:textColor="@color/purple_200"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/_10ssp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:text="@string/apartment"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/_12ssp" />

                        <EditText
                            android:id="@+id/apartment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:hint="@string/add_apartment_number"
                            android:inputType="text"
                            android:padding="@dimen/_8sdp"
                            android:textColor="@color/purple_200"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/_10ssp" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/nearest_landmark"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:id="@+id/landmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:hint="@string/add_bank_name_supermarket_hospital"
                    android:inputType="text"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/purple_200"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/nickname_"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:id="@+id/nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:hint="منزل, مكتب..."
                    android:inputType="text"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/purple_200"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_10ssp" />


                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_90sdp"
                    android:layout_marginEnd="@dimen/_10ssp"
                    android:layout_marginBottom="@dimen/_100sdp"
                    android:background="@drawable/add_address_btn_bg"
                    android:fontFamily="@font/droidkufi_bold"
                    android:onClick="saveAddress"
                    android:text="@string/save_address"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>