<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            android:id="@+id/layout_header"
            layout="@layout/layout_header" />

        <View
            android:id="@+id/view_dummy"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@id/layout_header"
            app:layout_constraintTop_toTopOf="@id/layout_header" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#F4F7F8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_dummy">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F4F7F8"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                tools:context=".modules.orders.presentation.view.placeprescriptionscreen.CheckOutActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:text="@string/address"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_white_bg"
                    android:padding="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/location_icon"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/ic_baseline_location_on_24" />

                    <TextView
                        android:id="@+id/address_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_toEndOf="@+id/location_icon"
                        android:ellipsize="end"
                        android:fontFamily="@font/droidkufi_bold"
                        android:lines="1"
                        android:text="القاهرة, الشروق"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_10sdp" />


                    <TextView
                        android:id="@+id/address_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/location_icon"
                        android:layout_alignStart="@+id/address_type"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/droidkufi_regular"
                        android:text="شارع محمد على, عمارة 13, شقة 5"
                        android:textSize="@dimen/_10sdp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/delivery_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:text="@string/delivery_time"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12sdp" />


                <LinearLayout
                    android:id="@+id/delivery_time_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_white_bg"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/motorbike" />

                    <TextView
                        android:id="@+id/tv_delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:text="@string/payment"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12sdp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_white_bg"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/cash" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:text="نقدى"
                        android:textAlignment="viewStart"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="تغير"
                        android:visibility="invisible"
                        android:textColor="@color/green"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_white_bg"
                    android:padding="@dimen/_10sdp">



                    <TextView
                        android:id="@+id/delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/delivery_fees"
                        android:textSize="@dimen/_12sdp" />


                    <TextView
                        android:id="@+id/delivery_fees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/for_free"
                        android:textColor="@color/gray_yodawy"
                        android:textSize="@dimen/_12sdp" />


                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/delivery"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/total"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_12sdp" />


                    <TextView
                        android:id="@+id/total_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/delivery_fees"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/to_be_confirmed"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/total_value"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/terms"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_12sdp" />


                </RelativeLayout>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/add_address_btn_bg"
                    android:onClick="confirmOrder"
                    android:text="@string/place_order"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>